<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consular_cli"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/frameConsultaCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layoutConsultarCliente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/identificacion"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_in_identificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Ingrese Identificación"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nombre Cliente"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/edit_in_NombreCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nombre del Cliente"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnConsultaCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/consultar"
                android:textColor="@color/ms_blue" />

            <TextView
                android:id="@+id/linea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:text="listo"
                android:textColor="@color/common_google_signin_btn_text_light_default"
                android:textSize="2sp" />

            <ProgressBar
                android:id="@+id/progressBar6"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ListView
                android:id="@+id/listClientesDialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textCodCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="COD"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNombreCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.30"
                    android:text="Ferreteria ORTEGA"
                    android:textColor="@color/countdown_indicator"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkBoxAgregarCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.27" />

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mensaje de Error"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

</LinearLayout>