<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.expriceit.maserven.activities.Configuraciones">

    <TextView
        android:id="@+id/textView94"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView83"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:textSize="1sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="Modalidad"
            android:textOff="@string/esquema_offline"
            android:textOn="@string/esquemaonline" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView85"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:textSize="1sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView78"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="Sincronizar PEDIDOS"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha: 2018-01-01"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="10sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar7"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_sync_black_24dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView86"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:textSize="1sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.96"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView77"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sincronizar PRODUCTOS"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView76"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha: 2018-01-01"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="10sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar9"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_sync_black_24dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView87"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:textSize="1sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.96"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView79"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sincronizar CLIENTES"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha: 2018-01-01"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="10sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar10"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_sync_black_24dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView88"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:textSize="1sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.96"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Valor I.V.A."
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_valor_iva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="12"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_porcentaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="%"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_valor_iva"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="12"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/img_btn_guardar_iva"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_save_black_24dp" />

        <ImageButton
            android:id="@+id/img_btn_editar_iva"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_edit_black_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView89"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:textSize="1sp" />

    <TextView
        android:id="@+id/textView84"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:text="http://expriceit.com.ec - estalisto"
        android:textAlignment="textEnd"
        android:textColor="@color/common_google_signin_btn_text_dark_disabled"
        android:textSize="8sp" />

</LinearLayout>
